--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
     }
 
     form {
-        background-color: #1e3a8a; /* dark blue */
+        background-color: grey;
         padding: 2rem;
         border-radius: 8px;
         width: 320px;
