--- a/templates/user_management.html
+++ b/templates/user_management.html
@@ -3,8 +3,8 @@
         <title>User Management</title>
     </head>
     <body>
+    {% include 'navbar.html' %}
         <div id="page">
-            {% include 'navbar.html' %}
             <div id="heading">
                 <h2>User Management</h2>
                 <h4>Create or View users</h4>
@@ -42,9 +42,128 @@
         <p>No users found</p>
             {% endif %}
             </div>
-            <div>
+            <div id="create-user-btn">
                 <a href="/users/create"><button>Create New User</button></a>
             </div>
         </div>
     </body>
+ <style>
+    * {
+        box-sizing: border-box;
+    }
+
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f8f9fa;
+    }
+
+    #page {
+        max-width: 960px;
+        margin: 0 auto;
+        padding: 20px;
+    }
+
+    #heading {
+        margin-bottom: 20px;
+    }
+
+    #heading h2 {
+        margin-bottom: 5px;
+        font-size: 24px;
+        color: gray
+    }
+
+    #heading h4 {
+        color: grey;
+        font-weight: normal;
+    }
+
+    form {
+        background-color: #fff;
+        padding: 16px;
+        border-radius: 8px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;
+        gap: 10px;
+    }
+
+    form input {
+        padding: 8px 12px;
+        font-size: 14px;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+    }
+
+    form button {
+        padding: 9px 14px;
+        font-size: 14px;
+        background-color: #ffb300;
+        color: white;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+
+    form button:hover {
+        background-color: #f6bf3e;
+    }
+
+    
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 14px;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+
+        th, td {
+        padding: 0.75rem;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+
+    th {
+        background-color: #f0f0f0;
+        font-weight: 600;
+    }
+
+    tr:hover {
+        background-color: #f9f9f9;
+    }
+
+    #Search_for_users {
+        text-align: center;
+    }
+
+    #create-user-btn {
+        display: flex;
+        justify-content: center;
+    }
+
+    #create-user-btn a button {
+        padding: 10px 16px;
+        background-color: #ffb300;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+
+    #create-user-btn a button:hover {
+        background-color: #f6bf3e;
+    }
+
+    a {
+        color: grey;
+        text-decoration: none;
+    }
+
+</style>
 </html>
