--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -3,29 +3,98 @@
         <title>Create new user</title>
     </head>
     <body>
+    {% include 'navbar.html' %}
         <div id="page">
-            {% include 'navbar.html' %}
             <div id="heading">
-                <h3>Create New User</h3>
+                <h2>Create New User</h3>
             </div>
             <div id="create-user-form">
-                <h3>Create User</h3>
                 <form method="POST" action="/users/create">
                     <label for="username">Username:</label>
                     <input type="email" id="username" name="username" required>
+
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
+
                     <label for="customer_id">Customer</label>
                     <select id="customer_id" name="customer_id" required>
                         {% for customer in customers %}
                         <option value="{{ customer.id }}">{{ customer.customer_name }}</option>
                         {% endfor %}
                     </select>
+
                     <label for="auth_level">Authorization Level</label>
                     <input name="auth_level" type="number" required>
+
                     <button type="submit">Create User</button>
                 </form>
             </div>
         </div>
     </body>
+      <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
+
+        #page {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        #heading {
+            margin-bottom: 20px;
+        }
+
+        #create-user-form {
+            background-color: white;
+            padding: 24px;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+
+        #create-user-form h3 {
+            margin-bottom: 20px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        input, select {
+            padding: 10px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        h2 {
+            margin-bottom: 5px;
+            font-size: 24px;
+            color: gray
+        }
+
+        button[type="submit"] {
+            align-self: start;
+            padding: 10px 16px;
+            font-size: 14px;
+            border: none;
+            border-radius: 6px;
+            background-color: #ffb300;
+            color: white;
+            cursor: pointer;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #f6bf3e;
+        }
+    </style>
 </html>
